adding SI figs from Jamie

--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -33,7 +33,7 @@ _Uncertainties inherent in method and intent inevitably drive differences in the
 _paragraph describing IUCN and AM as extent of occurrence and area of occupancy respectively, with basic defs and implication that AM will generally be smaller than IUCN; possibly refer to Table S1 for defs and details?_ _one reference: http://www.biodiversitya-z.org/content/species-extent-of-occurrence-eoo "The intent behind this parameter is to measure the degree to which risks from threatening factors are spread spatially across the taxon’s geographical distribution. It is not intended to be an estimate of the amount of occupied or potential habitat, or a general measure of the taxon’s range" and http://www.biodiversitya-z.org/content/species-area-of-occupancy-aoo "The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may, for example, contain unsuitable habitats"_
 -->
 
-The fundamental differences between the datasets suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@gaston_sizes_2009], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
+The fundamental differences between the datasets suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@gaston_sizes_2009], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
 
 Here we focus not on how the two datasets should ideally be used; instead, recognizing that each provides distinct value for conservation research, we explore hidden assumptions and sources of error within each dataset, and test the implications of choosing one over the other.  You do science with the data you have, not with the data you wish you had; often, the ideal type of spatial data is not available, and non-ideal data is better than no data at all.  In such a case, it is crucial to acknowledge, and where possible address, the resulting tradeoffs.
 
