--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -20,7 +20,7 @@ In comparing the IUCN and AquaMaps datasets, it is again important to emphasize 
 
 ## Taxonomic and geographic coverage
 
-The two datasets have notably different taxonomic (Fig 1A) and regional (Figs 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while AquaMaps includes distribution of species well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  
+The two datasets have notably different taxonomic (Fig 1A) and regional (Figs 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. Of the `r format(n_spp_all, big.mark = ',')` species mapped within these datasets, only `r format(n_spp_both, big.mark = ',')` (`r p_both_all`%) are mapped within both, with many taxa completely unrepresented in one dataset or the other.  While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while AquaMaps includes distribution of species well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  Together, the limitations of spatial and taxonomic coverage are likely to drive a researcher's choice of dataset far more strongly than the quality, format, or intended purpose of the dataset.
 
 ![](figures/Fig_1.png)
 
@@ -182,6 +182,6 @@ To achieve more comprehensive global coverage of species ranges it may be desira
 
 # Conclusions
 
-No spatial dataset can ever claim to know the "truth" of the whole of marine biodiversity.  AquaMaps and IUCN range maps show strong agreement for many well-studied species, but for many others, substantial differences arise from differences in methodology and intent of each dataset.  Although other approaches exist for predicting species distribution, these two are the largest approaches applied globally across a broad range of marine taxa.  Recognizing and acknowledging the advantages and intended purposes of the range maps presented by these datasets will increase their utility for research and conservation actions.  Conclusions drawn from each of these datasets could paint dramatically different pictures of global marine biodiversity or the effectiveness of conservation management decisions.
+No spatial dataset can ever claim to know the "truth" of the whole of marine biodiversity.  Although other approaches exist for predicting species distribution, AquaMaps and IUCN range maps are the largest approaches applied globally across a broad range of marine taxa.  These datasets show strong agreement for many well-studied species, but for many others, substantial differences arise from differences in methodology and intent of each dataset.  While the decision of which dataset to use should ideally be driven by the intended purpose for which it was created, the fact is that taxonomic coverage will likely be a more important factor.  Recognizing and acknowledging the advantages and differences of the range maps presented by these datasets will increase their utility for research and conservation actions.  Conclusions drawn from each of these datasets could paint dramatically different pictures of global marine biodiversity or the effectiveness of conservation management decisions.
 
-Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By understanding the distinctions between these two important and fundamentally different marine species range datasets, we improve our ability to inform strategic and effective conservation policy that supports a resilient ocean ecosystem.
+Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By highlighting the distinctions between these two important and fundamentally different marine species range datasets, we improve our ability to inform strategic and effective conservation policy that supports a resilient ocean ecosystem.
