--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -27,8 +27,8 @@ dir_anx <- file.path(dir_M, 'git-annex/globalprep/SPP_ICO')
 dir_fig <- file.path(dir_git, 'figures')
 dir_data <- file.path(dir_git, 'data')
 
-if(basename(getwd()) != 'data_explore') setwd('data_explore')
-source('data_explore_fxns.R')
+# if(basename(getwd()) != 'data_explore') setwd('data_explore')
+source(file.path(dir_git, 'data_explore', 'data_explore_fxns.R'))
 ### When knitting this, it automatically sets WD to be this directory...
 ### the 'setwd()' is there for running by chunk
 ```
@@ -209,14 +209,14 @@ bar_taxa <- ggplot(taxa_df2, aes(x = class, color = dataset)) +
   theme(panel.grid.major.x = element_blank()) +
   geom_linerange(aes(ymin = start, ymax = end, size = dataset),
                  position = position_dodge(width = 0.5)) +
-  scale_size_manual(values = c('IUCN' = .5, 'AquaMaps' = .5, 'Paired' = 3)) +
+  scale_size_manual(values = c('IUCN' = .5, 'AquaMaps' = .5, 'Paired' = 2.9)) +
   scale_color_manual(values = c('IUCN' = 'black', 'AquaMaps' = 'grey70', 'Paired' = 'black')) +
   geom_text(aes(label = n_label, y = 102),
-            size = 2,
+            size = 2.5,
             angle = 90, hjust = 0, color = 'grey30') +
   theme(axis.text.x = element_text(angle = 75, hjust = 1)) +
   scale_y_continuous(expand = c(0, 0),
-                     limits = c(0, 130),
+                     limits = c(0, 140),
                      breaks = break_nums,
                      labels = sprintf('%s%%', break_nums)) +
   labs(x = 'Class (in order of decreasing number of included species)',
@@ -275,6 +275,7 @@ scatter_quadplot <- ggplot(spp_list_labs, aes(x = x, y = y)) +
   ### add grid lines
   geom_vline(xintercept = break_nums, size = 0.25, color = 'white', alpha = .5) +
   geom_hline(yintercept = break_nums, size = 0.25, color = 'white', alpha = .5)
+
 
 
 ### plot the data points!
@@ -423,7 +424,7 @@ barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>%
               # select(spp_group_text, n_spp) %>%
               # distinct(),
             aes(label = sprintf('n = %s', n_spp), y = 1.01), hjust = 0, 
-            size = 2, 
+            size = 2.5, 
             color = 'grey30') +
   coord_flip() +
   labs(x = 'Taxonomic Group', 
@@ -432,9 +433,9 @@ barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>%
 
 print(barchart_spp_gp_quads)
 
-ggsave(plot = barchart_spp_gp_quads,
-       filename = file.path(dir_fig, 'barchart_spp_gp_quads.png'),
-       width = 19.05, height = 7, units = 'cm', dpi = 600)
+# ggsave(plot = barchart_spp_gp_quads,
+#        filename = file.path(dir_fig, 'barchart_spp_gp_quads.png'),
+#        width = 19.05, height = 7, units = 'cm', dpi = 600)
 
 write_csv(spp_gp_quadrants, file.path(dir_data, 'spp_gp_quads.csv'))
 
